@@ -40,7 +40,6 @@ Parse::RecDescent
 Plucene
 POSIX
 Template
-Test::MockObject (version 0.07 or later)
 Time::Piece
 URI::Escape
 XML::RSS
